Corrected alignment of sec-2

--- a/styles.css
+++ b/styles.css
@@ -60,9 +60,14 @@ width: 30%;
 h3 {
   font-style: italic;
   font-size: medium;
+  text-align: center;
 }
 h4 {
-  font-size: xxx-large;
+  justify-content: center;
+  display: flex;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 1.5rem
 }
 img {
   max-width: 1500px;
@@ -93,6 +98,8 @@ button {
 .clear-button {
   background: #95a5a6;
   color: white;
+  position: absolute;
+  margin-left: 25%
 }
 input {
   margin-bottom: 4%
@@ -100,10 +107,6 @@ input {
 .food-selection {
   flex-direction: column;
   align-items: center;
-  margin-top: 15%
+  margin-top: 15%;
+  position: relative;
 }
-
-/* removed from section
-margin-top: 4%;
-width: 36%;
-height: 39%;
